# EasyETFsAT

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
Documentation/: isin_storage.csv
Documentation/AgentInstructions/: FETCH_ONLY_MISSING_ISINS.md  REFRESH_EXISTING_ISINS.md
Documentation/Usage/: Test_Example.xlsx
alembic/: env.py
alembic/versions/: 20260418_0001_initial_schema.py  20260418_0002_safe_rename_to_enterprise_fields.py  20260418_0003_add_taxage_year_column.py  20260418_0004_add_taxlst_table.py  20260418_0005_extend_taxlst_with_year_fields.py  20260419_0006_rebuild_source_curated_architecture.py  20260419_0007_add_v1_taxdatpre_view.py  20260419_0008_add_refexc_and_extend_v1_taxdatpre.py  20260419_0009_extend_v1_taxdatpre_legal_entity_columns.py  20260419_0010_add_k40_k62_and_extend_v1_taxdatpre.py  20260419_0011_refine_v1_and_add_v2_taxdateur.py
docs/: db_naming_dictionary.md  db_table_catalog.md
fondant/: config.py
fondant/api/: __init__.py  main.py
fondant/db/: __init__.py  base.py  session.py
fondant/ecb/: __init__.py  client.py  models.py
fondant/ingestion/: __init__.py  fx_pipeline.py  pipeline.py  seed.py
fondant/jobs/: fetch_missing_isins.py  isin_storage.py  refresh_existing_isins.py
fondant/oekb/: __init__.py  client.py  models.py  parser.py
scripts/: verify_schema.sql
tests/: conftest.py  test_api_etf.py  test_ecb_client.py  test_fx_pipeline.py  test_ingestion.py  test_jobs_isin_workflows.py  test_migrations.py  test_oekb_client.py  test_oekb_parser.py
(+7 files in other folders)
