[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easyetfsat"
version = "0.1.0"
description = "Austrian ETF tax reporting backend using OeKB public API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.35",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20.0",
    "pytest>=8.2.0",
    "pytest-asyncio==0.24.0",
    "respx>=0.21.1",
    "ruff>=0.6.9",
    "testcontainers[postgres]>=4.9.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["fondant*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501", "UP017"]
